--- a/teste.yml
+++ b/teste.yml
@@ -173,3 +173,19 @@ spec:
         content: ${{ parameters.name }}-${{ parameters.type }}
       - title: Repository URL
         content: ${{ steps.publish.output.remoteUrl }}
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component                        ← O "kind: Component" fica aqui!
+metadata:
+  name: ${{ values.name }}-${{ values.type }}
+  description: ${{ values.description }}
+  annotations:
+    github.com/project-slug: sua-org/${{ values.name }}-${{ values.type }}
+  tags:
+    - iac
+    - ${{ values.type }}
+    - infrastructure
+spec:
+  type: infrastructure
+  lifecycle: production
+  owner: ${{ values.owner }}
